optimize performance for inspection iteration